# hybrid-notes-search

./: .gitignore  README.md  config.py  db.py  embeddings.py  eval.py  index.py  pyproject.toml  requirements.txt  search.py  test_search.py
.github/workflows/: test.yml
eval/corpus/: black-scholes.md  compound-interest.md  french-press.md  mitochondria.md  reciprocal-rank-fusion.md  rust-e0432.md  rust-e0433.md  solar-cell.md  tcp-handshake.md
notes/: local-embeddings.md  reciprocal-rank-fusion.md  vector-vs-keyword-search.md
