[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "hybrid-notes-search"
version = "0.1.0"
description = "Local hybrid (semantic + keyword) search over Markdown notes."
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = [
    "fastembed>=0.3,<1.0",
    "sqlite-vec>=0.1.3,<0.2",
    "numpy>=1.24,<3.0",
]

[project.scripts]
notes-index = "index:main"
notes-search = "search:main"

[tool.setuptools]
py-modules = ["config", "db", "embeddings", "index", "search"]
